--- a/MANUALHTML/cap.html
+++ b/MANUALHTML/cap.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : cap [&lt;f1&gt; &lt;f2&gt; ..] &lt;file&gt;
           cap -d &lt;string&gt;
 Version : Thu Apr 21 00:58:47 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数で指定したフィールドの半角英小文字を、すべて半角英大文字に変換して出力する。変換できない文字(日本語、数字、記号、全角文字)は、変換されずにそのまま出力される。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
 <p><code>-d</code>オプションがあると<code>&lt;string&gt;</code>で指定された文字列に対して変換を行なう。</p>
@@ -150,12 +148,10 @@ Edition : 1
 002 england russia
 $ cap 1 2 data
 001 JAPAN america
-002 ENGLAND russia
-</pre>
+002 ENGLAND russia</pre>
 <h3>【例２】</h3>
 <pre class="prettyprint">$ cap -d japan
-JAPAN
-</pre>
+JAPAN</pre>
     </div>
 
     <div id="lastmodified">Last modified: Thu Aug 11 10:19:55 JST 2022</div>
