--- a/MANUALHTML/comma.html
+++ b/MANUALHTML/comma.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : comma [+&lt;n&gt;h][-4] [&lt;f1&gt; &lt;f2&gt; ...] &lt;file&gt;
         : comma -d[4] &lt;string&gt;
 Version : Thu Apr 21 00:58:47 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの数字フィールドに3桁または4桁のカンマを追加する。カンマを追加するフィールドは引数で指定できる。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
 <h3>【注意】</h3>
@@ -150,8 +148,7 @@ Edition : 1
 20060204 16300 300100
 20060205 41000 210000
 20060206 771100 400000
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ comma 2 3 data
 20060201 296,030 6,710,000
 20060202 1,300,100 3,130,000
@@ -159,8 +156,7 @@ $
 20060204 16,300 300,100
 20060205 41,000 210,000
 20060206 771,100 400,000
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ comma -4 2 3 data     ←4桁カンマ
 20060201 29,6030 671,0000
 20060202 130,0100 313,0000
@@ -168,8 +164,7 @@ $
 20060204 1,6300 30,0100
 20060205 4,1000 21,0000
 20060206 77,1100 40,0000
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p><code>+h</code>オプションを使用すると1行目の行を除いてカンマを追加する。先頭行が項目名などの場合に使用する。+2hや+3hのように数字を指定すると、2行目または3行目以降の行にカンマを追加するようになる。</p>
 <pre class="prettyprint">$ cat data              ←元データ：先頭行に項目(ヘッダー)がついている
@@ -180,8 +175,7 @@ $
 20060204 16300 300100
 20060205 41000 210000
 20060206 771100 400000
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ comma +h 2 3 data             ←先頭行を除いてカンマ変換する
 年月日 売上高 発注高
 20060201 296,030 6,710,000
@@ -190,18 +184,15 @@ $
 20060204 16,300 300,100
 20060205 41,000 210,000
 20060206 771,100 400,000
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p>数字の文字列を直接引数に指定してカンマを追加することができる。</p>
 <pre class="prettyprint">$ comma -d 1234567
 1,234,567
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ comma -d4 1234567
 123,4567
-$
-</pre>
+$</pre>
 <h3>【ワンポイント】</h3>
 <p>データファイルの数値にcommaでカンマを追加してしまうと、それ以降は<a href="sm2.html" class="command">sm2(1)</a>や<a href="divsen.html" class="command">divsen(1)</a>などでの数値計算はできなくなる。カンマの追加はすべての計算を終えた最終成形の段階で使用する。</p>
 <h3>【ワンポイント】</h3>
