--- a/MANUALHTML/count.html
+++ b/MANUALHTML/count.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : count &lt;k1&gt; &lt;k2&gt; &lt;file&gt;
 Version : Thu Aug 20 03:13:37 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの指定したキーフィールドの値が同じ行(行)の数を出力する。キーとなるフィールドは開始となるフィールドkey1から、終了となるフィールドkey2への形で指定する。</p>
 <h3>【例1】</h3>
@@ -157,15 +155,13 @@ Edition : 1
 04 神奈川県 14 川崎市 30 12 32 44 19
 04 神奈川県 15 厚木市 48 66 23 71 24
 04 神奈川県 16 小田原市 45 21 24 39 03
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ count 1 2 data                ←県ごとの市の数を数えて出力
 01 埼玉県 3
 02 東京都 6
 03 千葉県 3
 04 神奈川県 4
-$
-</pre>
+$</pre>
 <h3>【関連項目】</h3>
 <p><a href="gyo.html" class="command">gyo(1)</a>、<a href="juni.html" class="command">juni(1)</a>、<a href="rank.html" class="command">rank(1)</a>、<a href="retu.html" class="command">retu(1)</a></p>
     </div>
