--- a/MANUALHTML/delf.html
+++ b/MANUALHTML/delf.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : delf f1 f2 ... [file]
         : delf -d f1 f2 ... string
 Version : Thu Apr 21 00:58:47 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>file</code>から、指定したフィールドだけを除いて出力する(delf=delete field)。<a href="self.html" class="command">self(1)</a>とは逆の動作となる。ファイル名指定なし、あるいは、ファイル名が-の時は標準入力を期待する。</p>
 <h3>【オプション】</h3>
@@ -154,8 +152,7 @@ Edition : 1
 0000009 米原______ 68 F
 0000010 柳本______ 50 F
 0000011 安武______ 55 F
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ delf 2 data           ←第2フィールドを除いて出力する。
 0000000 50 F
 0000001 50 F
@@ -167,8 +164,7 @@ $
 0000009 68 F
 0000010 50 F
 0000011 55 F
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <pre class="prettyprint">$ delf NF data
 0000000 浜地______ 50
@@ -181,8 +177,7 @@ $
 0000009 米原______ 68
 0000010 柳本______ 50
 0000011 安武______ 55
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <pre class="prettyprint">$ delf 2/3 data
 0000000 F
@@ -195,8 +190,7 @@ $
 0000009 F
 0000010 F
 0000011 F
-$
-</pre>
+$</pre>
 <h3>【注意】</h3>
 <p>入力ファイルが改行文字で終了していない場合、つまり行が尻切れになっている場合は、ファイル末尾に改行文字が追加されて完結した行になる。</p>
 <p>実行時パラメータの最後尾が実際に存在するファイルの名前であればそれを入力ファイルとして開く。このファイル名は「10」のような数字列であってもかまわない。最後尾が存在するファイル名でないときはそれをフィールドとして処理し、入力ファイル名は省略されたものとして標準入力(stdin)を使用する。</p>
