--- a/MANUALHTML/delr.html
+++ b/MANUALHTML/delr.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : delr &lt;field&gt; &lt;str&gt; &lt;file&gt;
 Version : Sun Nov 21 17:29:32 JST 2021
           Open usp Tukubai (LINUX+FREEBSD/PYTHON2.4/UTF-8)
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルのテキストデータより、指定したフィールドが指定した文字列と完全一致した行を除いて出力します。ファイル名が省略された時及び<code>&quot;-&quot;</code>の時は標準入力から入力します。</p>
 <h3>【例１】 指定したフィールドが完全一致した行を除いて出力する</h3>
@@ -145,18 +143,15 @@ Edition : 1
 0001 a
 0002 b
 0003 c
-0004 c
-</pre>
+0004 c</pre>
 <pre class="prettyprint">$ delr 1 &quot;0001&quot; data
 0002 b
 0003 c
-0004 c
-</pre>
+0004 c</pre>
 <h3>【例２】</h3>
 <pre class="prettyprint">$ delr 2 c data
 0001 a
-0002 b
-</pre>
+0002 b</pre>
     </div>
 
     <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
