--- a/MANUALHTML/divsen.html
+++ b/MANUALHTML/divsen.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : divsen [-s] &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
 Version : Mon Mar 21 16:31:46 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの数値を1,000で除算し出力する。千単位の表を作成する場合などに使用する。引数において1,000で除算する各フィールドを順に指定する。なお、小数点以下の数値は四捨五入される。<code>-s</code>オプションを指定すると四捨五入せず、小数点の値をそのまま出力する。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
 <h3>【例1】</h3>
@@ -147,8 +145,7 @@ Edition : 1
 20060204 16300 300100
 20060205 41000 210000
 20060206 771100 400000
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ divsen 2 3 data               ←2フィールドと3フィールドを1,000で除算
 20060201 296 6710
 20060202 1300 3130
@@ -156,8 +153,7 @@ $
 20060204 16 300
 20060205 41 210
 20060206 771 400
-$
-</pre>
+$</pre>
 <p><code>-s</code>を指定して小数点まで表示させる。こうしたデータは以降で<a href="marume.html" class="command">marume(1)</a>などを使って加工する。　</p>
 <pre class="prettyprint">$ divsen -s 2 3 data            ←小数点まで表示
 20060201 296.030 6710.000
@@ -166,8 +162,7 @@ $
 20060204 16.300 300.100
 20060205 41.000 210.000
 20060206 771.100 400.000
-$
-</pre>
+$</pre>
 <h3>【ワンポイント】</h3>
 <p><code>divsen</code>された結果をさらにパイプでつないで<code>divsen</code>を実行すると、100万単位のデータを作成することができる。</p>
 <h3>【注意】</h3>
