--- a/MANUALHTML/getfirst.html
+++ b/MANUALHTML/getfirst.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : getfirst [+ng[&lt;fd&gt;]] &lt;n1&gt; &lt;n2&gt; &lt;file&gt;
 Version : Sat Sep 19 23:49:26 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータに対し、指定されたキーフィールドの値が同一の行が複数ある場合に、キーフィールドごとに最初の行のみを抽出して出力する。</p>
 <h3>【例1】</h3>
@@ -156,16 +154,14 @@ Edition : 1
 0000030 じゃが芋 20060201 575
 0000030 じゃが芋 20060202 541
 0000030 じゃが芋 20060203 184
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ getfirst 1 2 data             ←同一商品コード/商品名の最初の行のみ出力
 0000007 セロリ 20060201 117
 0000017 練馬大根 20060201 31
 0000021 温州みかん 20060201 90
 0000025 プリンスメロン 20060201 129
 0000030 じゃが芋 20060201 575
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p>&quot;<code>+ng</code>&quot;オプションを指定すると、同じキーフィールドの値を持つ行の最初の行以外を標準エラー出力に出力する。</p>
 <pre class="prettyprint">$ getfirst +ng 1 2 data &gt; /dev/null 2&gt; data2
@@ -180,8 +176,7 @@ $ cat data2
 0000025 プリンスメロン 20060203 391
 0000030 じゃが芋 20060202 541
 0000030 じゃが芋 20060203 184
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p><code>+ng</code>オプションに<code>&lt;fd&gt;</code>を指定すると、標準エラー出力のかわりに<code>&lt;fd&gt;</code>への出力が実施される。</p>
 <pre class="prettyprint">$ getfirst +ng4 1 2 data &gt; /dev/null 4&gt; data2
@@ -196,8 +191,7 @@ $ cat data2
 0000025 プリンスメロン 20060203 391
 0000030 じゃが芋 20060202 541
 0000030 じゃが芋 20060203 184
-$
-</pre>
+$</pre>
 <h3>【注意】</h3>
 <p>フィールド分割において連続する空白は1つの空白とみなされる。また、行頭の空白は無視される。例えば、キーフィールド指定が1と2の場合、次の2行は同じキーフィールドを持つとみなされる。</p>
 <pre style="margin-left: 3.5em;">
