--- a/MANUALHTML/join2.html
+++ b/MANUALHTML/join2.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : join2 [-d&lt;string&gt;|+&lt;string&gt;] key=&lt;key&gt; &lt;master&gt; [&lt;tran&gt;]
 Version : Sun Jun 19 23:55:51 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>tranの<code>key=&lt;n&gt;</code>で指定したキーフィールドがmasterの第1フィールド(キーフィールド)と一致した行をtranから抽出し、masterの情報を連結して出力する。一致しない行はダミーデータ*を連結して出力する。ダミーデータは<code>-d</code>オプションまたは+オプションにて指定できる。</p>
 <p>masterに<code>-</code>を指定すると標準入力をマスタファイルとする。tranが無指定かまたは<code>-</code>が指定されている場合には、標準入力がトランザクションファイルとなる。</p>
@@ -149,8 +147,7 @@ Edition : 1
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
@@ -162,8 +159,7 @@ $
 0000009 60 89 33 18 6
 0000010 95 60 35 93 76
 0000011 92 56 83 96 75
-$
-</pre>
+$</pre>
 <p>masterに存在しない行は次のように*で補完して出力される。</p>
 <pre class="prettyprint">$ join2 key=1 master kekka
 0000000 ********** ** * 91 59 20 76 54
@@ -176,8 +172,7 @@ $
 0000009 ********** ** * 60 89 33 18 6
 0000010 柳本______ 50 F 95 60 35 93 76
 0000011 ********** ** * 92 56 83 96 75
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p>左から順に連続した複数のフィールドをキーに指定する場合次のようになる。第2、第3フィールドでキーが一致するかどうかをチェックしている。</p>
 <pre class="prettyprint">$ cat master
@@ -185,8 +180,7 @@ A 0000003 杉山______ 26 F
 A 0000005 崎村______ 50 F
 B 0000007 梶川______ 42 F
 C 0000010 柳本______ 50 F
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat kekka
 1 A 0000000 91 59 20 76 54
 2 A 0000001 46 39 8  5  21
@@ -198,8 +192,7 @@ $
 8 C 0000009 60 89 33 18 6
 9 C 0000010 95 60 35 93 76
 10 C 0000011 92 56 83 96 75
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ join2 key=2/3 master kekka
 1 A 0000000 ********** ** * 91 59 20 76 54
 2 A 0000001 ********** ** * 46 39 8  5  21
@@ -211,8 +204,7 @@ $
 8 C 0000009 ********** ** * 60 89 33 18 6
 9 C 0000010 柳本______ 50 F 95 60 35 93 76
 10 C 0000011 ********** ** * 92 56 83 96 75
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p>+<code>&lt;string&gt;</code>はダミーデータとして補完する文字を指定するオプション。+の後に補完で使用する文字を指定する。</p>
 <pre class="prettyprint">$ cat master
@@ -220,8 +212,7 @@ $
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
@@ -233,8 +224,7 @@ $
 0000009 60 89 33 18 6
 0000010 95 60 35 93 76
 0000011 92 56 83 96 75
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ join2 +@ key=1 master kekka
 0000000 @ @ @ 91 59 20 76 54
 0000001 @ @ @ 46 39 8  5  21
@@ -246,18 +236,15 @@ $
 0000009 @ @ @ 60 89 33 18 6
 0000010 柳本______ 50 F 95 60 35 93 76
 0000011 @ @ @ 92 56 83 96 75
-$
-</pre>
+$</pre>
 <h3>【備考】</h3>
 <p>masterが0バイトの時は何も連結せずtranそのものを出力する。</p>
 <pre class="prettyprint">$ : &gt; master
 $ join2 key=1 master tran &gt; data
-$ cmp tran data         ←同じデータが出力される
-</pre>
+$ cmp tran data         ←同じデータが出力される</pre>
 <p>masterのフィールドを保証したい時は、例えば次のようなコードを書く。</p>
 <pre class="prettyprint">$ [ ! -s master ] &amp;&amp; echo 0000000 0 &gt; master
-$ join2 key=1 master tran
-</pre>
+$ join2 key=1 master tran</pre>
 <h3>【関連項目】</h3>
 <p><a href="cjoin0.html" class="command">cjoin0(1)</a>、<a href="cjoin1.html" class="command">cjoin1(1)</a>、<a href="cjoin2.html" class="command">cjoin2(1)</a>、<a href="join0.html" class="command">join0(1)</a>、<a href="join1.html" class="command">join1(1)</a>、<a href="loopj.html" class="command">loopj(1)</a>、<a href="loopx.html" class="command">loopx(1)</a>、<a href="up3.html" class="command">up3(1)</a>、<a href="master-file.html" class="command">マスタファイル(5)</a>、<a href="transaction-file.html" class="command">トランザクションファイル(5)</a></p>
     </div>
