--- a/MANUALHTML/man2.html
+++ b/MANUALHTML/man2.html
@@ -133,14 +133,11 @@
 <p><code>man2</code> :  USP コマンドのマニュアル表示</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : man2 &lt;command&gt;
-Version : Mon Aug  8 12:15:22 JST 2022
-
-</pre>
+Version : Mon Aug  8 12:15:22 JST 2022</pre>
 <h3>【説明】</h3>
 <p>USP コマンドのマニュアルを表示します。</p>
 <h3>【例】</h3>
-<pre class="prettyprint">$ man2 join0   &lt;-- join0 のマニュアルを表示します。
-</pre>
+<pre class="prettyprint">$ man2 join0   &lt;-- join0 のマニュアルを表示します。</pre>
     </div>
 
     <div id="lastmodified">Last modified: Mon Aug  8 12:16:16 JST 2022</div>
