--- a/MANUALHTML/msort.html
+++ b/MANUALHTML/msort.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : msort key=&lt;key&gt; &lt;file&gt;
 Version : Sat Mar 12 17:37:17 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>key=&lt;key&gt;</code>にしたがって<code>&lt;file&gt;</code>のソートを行います。<code>&lt;key&gt;</code>として、フィールドの位置を指定できます。</p>
 <pre style="margin-left: 3.5em;">
