--- a/MANUALHTML/numchar.html
+++ b/MANUALHTML/numchar.html
@@ -134,15 +134,12 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : numchar
 Version : Tue Feb 19 23:38:53 JST 2019
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>標準入力から入力された文字列を数値文字参照に変換します。</p>
 <h3>【例1】</h3>
 <pre class="prettyprint">$ echo 我々は宇宙人だ。 | numchar
-&amp;#x6211;&amp;#x3005;&amp;#x306f;&amp;#x5b87;&amp;#x5b99;&amp;#x4eba;&amp;#x3060;&amp;#x3002;
-</pre>
+&amp;#x6211;&amp;#x3005;&amp;#x306f;&amp;#x5b87;&amp;#x5b99;&amp;#x4eba;&amp;#x3060;&amp;#x3002;</pre>
 <h3>【コメント】</h3>
 <p>このコマンドは、「シェルスクリプト高速開発手法」のために作られたものです。</p>
     </div>
