--- a/MANUALHTML/ratio.html
+++ b/MANUALHTML/ratio.html
@@ -137,9 +137,7 @@ Option  : ref=&lt;ref&gt;             ←参照キーの指定
         : -&lt;s&gt;                  ←小数点以下の精度
         : +&lt;n&gt;h                 ←先頭&lt;n&gt;行をヘッダーとみなす
 Version : Tue Oct 20 15:17:47 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータに対し、<code>key=</code>で指定したフィールドに対して全行の合計に対する各フィールドの値の構成比を算出し、次のフィールドに挿入して出力する。</p>
 <h3>【例1】</h3>
@@ -149,8 +147,7 @@ b店 1日目 210 113
 c店 1日目 81   52
 d店 1日目 75   48
 e店 1日目 211 140
-$
-</pre>
+$</pre>
 <p>売数(第3フィールド)の店別構成比を求めて売数の次のフィールドに挿入するには、次のようにコマンドを実行する。</p>
 <pre class="prettyprint">$ ratio key=3 data |  keta
 a店 1日目 103 15.1  62          ←第4フィールドが構成比になっている
@@ -158,8 +155,7 @@ b店 1日目 210 30.9 113
 c店 1日目  81 11.9  52
 d店 1日目  75 11.0  48
 e店 1日目 211 31.0 140
-$
-</pre>
+$</pre>
 <h3>【例2】refオプション</h3>
 <p><code>ref=</code>で指定したフィールドをキーフィールドとし、キーフィールドの値が同じ行の中で構成比を計算して出力する。なお、キーフィールドはあらかじめ整列されていることが条件となる。</p>
 <pre class="prettyprint">$ cat data
@@ -178,8 +174,7 @@ d店 3日目  34  19
 e店 1日目 211 140
 e店 2日目 149  91
 e店 3日目 120  73
-$
-</pre>
+$</pre>
 <p>各日(第2フィールド)毎に店別の売数(第3フィールド)の構成比を求める。</p>
 <pre class="prettyprint">$ sort -k2,2 -k1,1 data | ratio ref=2 key=3 | keta
 a店 1日目 103 15.1  62          ←第4フィールドが1日目における構成比
@@ -197,8 +192,7 @@ b店 3日目 150 37.1  82
 c店 3日目  38  9.4  21
 d店 3日目  34  8.4  19
 e店 3日目 120 29.7  73
-$
-</pre>
+$</pre>
 <h3>【例3】+hオプション</h3>
 <p><code>+&lt;n&gt;h</code>オプションを付けると、先頭の<code>&lt;n&gt;</code>行を飛ばして構成比を計算する。先頭行に既に項目名などのヘッダーが付与されているデータを計算する場合などに使用する。新たに増える構成比のフィールドのヘッダーは@となる。</p>
 <pre class="prettyprint">$ cat data
@@ -208,8 +202,7 @@ b店 1日目  210  113
 c店 1日目   81   52
 d店 1日目   75   48
 e店 1日目  211  140
-$
-</pre>
+$</pre>
 <p>先頭行を飛ばして売数(第3フィールド)の店別構成比を求めて売数の次のフィールドに挿入する。</p>
 <pre class="prettyprint">$ ratio +h key=3 data |  keta
 店   日付 売数    @ 客数                ←先頭行はそのまま(計算しない)
@@ -218,8 +211,7 @@ b店 1日目  210 30.9  113
 c店 1日目   81 11.9   52
 d店 1日目   75 11.0   48
 e店 1日目  211 31.0  140
-$
-</pre>
+$</pre>
 <h3>【例4】-&lt;s>オプション</h3>
 <p>-&lt;数値&gt;で構成比の小数点以下の精度を指定できる。</p>
 <pre class="prettyprint">$ cat data
@@ -228,8 +220,7 @@ b店 1日目 210 113
 c店 1日目 81   52
 d店 1日目 75   48
 e店 1日目 211 140
-$
-</pre>
+$</pre>
 <p>売数(第3フィールド)の店別構成比を小数点3桁まで求める。</p>
 <pre class="prettyprint">$ ratio -3 key=3 data |  keta
 a店 1日目 103 15.147  62
@@ -237,8 +228,7 @@ b店 1日目 210 30.882 113
 c店 1日目  81 11.912  52
 d店 1日目  75 11.029  48
 e店 1日目 211 31.029 140
-$
-</pre>
+$</pre>
 <h3>【関連項目】</h3>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
