--- a/MANUALHTML/retu.html
+++ b/MANUALHTML/retu.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : retu [-f] &lt;file&gt; ...
 Version : Sat Jun 20 21:57:22 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの列数(フィールド数)をカウントして出力する。</p>
 <h3>【例1】</h3>
@@ -147,32 +145,27 @@ Edition : 1
 0000004 白土______ 40 M 58 71 20 10 6
 0000005 崎村______ 50 F 82 79 16 21 80
 0000007 梶川______ 42 F 50 2  33 15 62
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ retu data
 9
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p>複数のファイルの列数(フィールド数)を一度にカウントできる。同一ファイル内に違う列数の行があると、列数が変化した時点で列数を出力する。<code>-f</code>オプションをつけるとファイル名も出力される。</p>
 <pre class="prettyprint">$ cat data1
 1 file1
 2 file1
 3 file1
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat data2
 1 file2
 2
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat data3
 1
 2 file3
 3
 4 file3
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ retu data1 data2 data3
 2
 2
@@ -181,8 +174,7 @@ $
 2
 1
 2
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p><code>-f</code>オプションを使用するとファイル名と列数をそれぞれ表示する。</p>
 <pre class="prettyprint">$ retu -f data1 data2 data3
@@ -193,12 +185,10 @@ data3 1
 data3 2
 data3 1
 data3 2
-$
-</pre>
+$</pre>
 <h3>【備考】</h3>
 <p>ファイル名に<code>-</code>を指定すると標準入力からのデータ読み込みを期待する。</p>
-<pre class="prettyprint">$ cat data2 | retu -f data1 - data3
-</pre>
+<pre class="prettyprint">$ cat data2 | retu -f data1 - data3</pre>
 <h3>【関連項目】</h3>
 <p><a href="count.html" class="command">count(1)</a>、<a href="gyo.html" class="command">gyo(1)</a>、<a href="juni.html" class="command">juni(1)</a>、<a href="rank.html" class="command">rank(1)</a></p>
     </div>
