--- a/MANUALHTML/uconv.html
+++ b/MANUALHTML/uconv.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : uconv &lt;field&gt; &lt;str&gt; &lt;file&gt;
 Option  : --through &lt;str&gt;
 Version : Sun Apr 17 16:06:00 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>UTF-8 と Shif-JIS, EUC-JP の相互の文字コード変換を行います。オプションと変換の対応は、以下のようになります。</p>
 <ul>
