--- a/MANUALHTML/calsed.html
+++ b/MANUALHTML/calsed.html
@@ -137,9 +137,7 @@
 Option  : -n&lt;string&gt;
           -s&lt;c&gt;
 Version : Tue Oct 19 23:46:03 JST 2021
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>calsed</code>は sed の文字列置換機能の簡易版です。指定した元文字列を指定した文字列に置換します。sed のように、元文字列に正規表現を使うことはできません。ファイル名を指定しないか、<code>&quot;-&quot;</code>の時は、標準入力を期待します。置換後文字列が<code>&quot;@&quot;</code>の場合、ヌル文字列に置換します。この文字列を変更するのに、<code>-n</code>オプションを指定します。<code>-s</code>オプションは置換後文字列の中で半角空白に変換する文字を指定します。</p>
 <h3>【例１】</h3>
@@ -153,41 +151,35 @@ $ calsed NAME usp data
 $ calsed NAME usp data | calsed AGE 25 - &gt; result
 $ cat result
 &lt;td&gt;usp&lt;/td&gt;
-&lt;td&gt;25&lt;/td&gt;
-</pre>
+&lt;td&gt;25&lt;/td&gt;</pre>
 <h3>【例２】</h3>
 <p>置換後文字列に空白がある場合</p>
 <pre class="prettyprint">$ calsed NAME &quot;usp lab&quot; data &gt; result
 $ cat result
 &lt;td&gt;usp lab&lt;/td&gt;
-&lt;td&gt;AGE&lt;/td&gt;
-</pre>
+&lt;td&gt;AGE&lt;/td&gt;</pre>
 <h3>【例３】</h3>
 <p>置換後文字列にヌル文字列</p>
 <pre class="prettyprint">$ calsed NAME @ data &gt; result
 $ cat result
 &lt;td&gt;&lt;/td&gt;
-&lt;td&gt;AGE&lt;/td&gt;
-</pre>
+&lt;td&gt;AGE&lt;/td&gt;</pre>
 <h3>【例４】</h3>
 <p>ヌル文字列への変換を行わない</p>
 <pre class="prettyprint">$ calsed -n &quot;&quot; NAME @ data &gt; result
 $ cat result
 &lt;td&gt;@&lt;/td&gt;
-&lt;td&gt;AGE&lt;/td&gt;
-</pre>
+&lt;td&gt;AGE&lt;/td&gt;</pre>
 <h3>【例５】</h3>
 <p>空白に変換する文字を指定する</p>
 <pre class="prettyprint">$ calsed -s_ NAME usp_lab data
 &lt;td&gt;usp lab&lt;/td&gt;
-&lt;td&gt;AGE&lt;/td&gt;
-</pre>
+&lt;td&gt;AGE&lt;/td&gt;</pre>
 <h3>【例６】</h3>
 <p>変換元文字列と変換後文字列をセットにしたファイルを指定して、置換を行うことができます。このファイルは name 形式であることが必要です。</p>
 <pre class="prettyprint">before1 after1
 before2 after2
-before3 after3
-</pre>
+before3 after3</pre>
 <p><code>&lt;before&gt;</code>文字列のあと、半角空白を１個はさんで<code>&lt;after&gt;</code>文字列を指定します。<code>&lt;after&gt;</code>文字列はヌル文字列でも半角空白を含む文字列でも構いません。<code>&lt;after&gt;</code>文字列が<code>&quot;@&quot;</code>の時、ヌル文字列に変換されます。この文字列は<code>-n</code>オプションで変更できます。<code>-s</code>オプションで<code>&lt;after&gt;</code>文字列の文字を半角空白に置換することができます。</p>
 <pre class="prettyprint">$ cat script
 NAME usp
@@ -195,8 +187,7 @@ AGE 25
 $ calsed -f script data &gt; result
 $ cat result
 &lt;td&gt;usp&lt;/td&gt;
-&lt;td&gt;25&lt;/td&gt;
-</pre>
+&lt;td&gt;25&lt;/td&gt;</pre>
 <h3>【例７】</h3>
 <pre class="prettyprint">$ cat script2
 NAME @
@@ -204,8 +195,7 @@ AGE
 $ calsed -f script2 data &gt; result
 $ cat result
 &lt;td&gt;&lt;/td&gt;
-&lt;td&gt;&lt;/td&gt;
-</pre>
+&lt;td&gt;&lt;/td&gt;</pre>
 <h3>【例８】</h3>
 <p>空白をそのまま置換する</p>
 <pre class="prettyprint">$ cat script3 &lt;- [空白]usp[空白]lab[空白] を指定
@@ -214,8 +204,7 @@ AGE 25
 $ calsed -f script3 data &gt; result
 $ cat result
 &lt;td&gt; usp lab &lt;/td&gt;
-&lt;td&gt;25&lt;/td&gt;
-</pre>
+&lt;td&gt;25&lt;/td&gt;</pre>
 <h3>【例９】</h3>
 <p>空白文字に置換する文字を指定</p>
 <pre class="prettyprint">$ cat script4
@@ -224,8 +213,7 @@ AGE 25
 $ calsed -s_ -f script4 data &gt; result
 $ cat result
 &lt;td&gt;usp lab&lt;/td&gt;
-&lt;td&gt;25&lt;/td&gt;
-</pre>
+&lt;td&gt;25&lt;/td&gt;</pre>
     </div>
 
     <div id="lastmodified">Last modified: Mon Aug  8 11:01:55 JST 2022</div>
