--- a/MANUALHTML/check_inlist_name.html
+++ b/MANUALHTML/check_inlist_name.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : check_inlist_name &lt;check_file&gt; &lt;name_file&gt;
 Option  : --through &lt;string&gt;
 Version : Sun Nov 21 17:29:32 JST 2021
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;check_file&gt;</code>に記述されているタグ名とリスト名にしたがい、<code>&lt;name_file&gt;</code>の値がリストに存在しているかのチェックをします。<code>&lt;check_file&gt;</code>で複数のタグ名を「.」で区切って連接しタグ組として指定したときは<code>&lt;name_file&gt;</code>の複数の行で同一の連番でタグ組を構成しそれぞれの値でつくる組がリストファイル中に存在するかをチェックします</p>
 <p>エラーがあった場合は、コマンドはエラー終了し、標準出力にタグ名とリスト名を出力します。 </p>
@@ -146,58 +144,47 @@ Edition : 1
 <h3>【例１】</h3>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat check
 A /tmp/OS_FILE      &lt;-- タグ名とリストファイル名(絶対パスであること)
-B /tmp/ABC_FILE
-</pre>
+B /tmp/ABC_FILE</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat /tmp/OS_FILE
 Linux     # comment
 UNIX      # comment
-Windows   # comment
-</pre>
+Windows   # comment</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat /tmp/ABC_FILE
 abc   # comment
-cde   # comment
-</pre>
+cde   # comment</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat data
 A Linux
 B_001 abc
 B_002 cde
 B_003 fgh
-B_004 _     &lt;--  &quot;_&quot; はチェックの対象外(--through オプションで変更可)
-</pre>
+B_004 _     &lt;--  &quot;_&quot; はチェックの対象外(--through オプションで変更可)</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ check_inlist_name check data
 B_003 /tmp/ABC_FILE
 [usp1 usp@ ~]$ echo $?
-1
-</pre>
+1</pre>
 <h3>【例２】</h3>
 <p>複数チェック</p>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat check
 A.B list1   &lt;-- dataファイル中の（連番が同じ）「A_nの値とB_nの値」の組がlist1ファイルにあるか
-C list2
-</pre>
+C list2</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat list1
 1 3  # comment
-4 5  # comment
-</pre>
+4 5  # comment</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat list2
 5  # comment
 6  # comment
-7  # comment
-</pre>
+7  # comment</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat data
 A_01 1
 A_02 2
 B_01 3
 B_02 4
-C 1
-</pre>
+C 1</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ check_inlist_name check data
 A_02 B_02 list1   &lt;-- dataファイル中の「A_02の値とB_02の値の組」は「2 4」でこれはlist1ファイルにない
-C list2
-</pre>
+C list2</pre>
 <pre class="prettyprint">[usp1 usp@ ~]$ echo $?
-1
-</pre>
+1</pre>
     </div>
 
     <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
