--- a/MANUALHTML/cjoin0.html
+++ b/MANUALHTML/cjoin0.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : cjoin0 [+ng[&lt;fd&gt;]] key=&lt;n&gt; &lt;master&gt; [&lt;tran&gt;]
 Version : Fri May 20 21:16:07 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>tranの<code>key=&lt;n&gt;</code>で指定したキーフィールドがmasterの第1フィールド(キーフィールド)と一致した行のみtranから抽出して出力する。</p>
 <p>masterに<code>-</code>を指定すると標準入力をマスタファイルとする。tranが無指定かまたは<code>-</code>が指定されている場合には、標準入力がトランザクションファイルとなる。</p>
@@ -151,8 +149,7 @@ Edition : 1
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat kekka
 0000005 82 79 16 21 80
 0000001 46 39 8  5  21
@@ -160,28 +157,24 @@ $
 0000009 60 89 33 18 6
 0000003 30 50 71 36 30
 0000007 50 2  33 15 62
-$
-</pre>
+$</pre>
 <p>kekkaの第1フィールドがmasterファイルに存在する行のみ抽出する。</p>
 <pre class="prettyprint">$ cjoin0 key=1 master kekka
 0000005 82 79 16 21 80
 0000003 30 50 71 36 30
 0000007 50 2  33 15 62
-$
-</pre>
+$</pre>
 <h3>【例2】+ngオプションの使い方</h3>
 <pre class="prettyprint">$ cjoin0 +ng key=1 master kekka &gt; ok 2&gt; ng
 $ cat ng
 0000001 46 39 8  5  21
 0000004 58 71 20 10 6
 0000009 60 89 33 18 6
-$
-</pre>
+$</pre>
 <h3>【例3】標準入力の使い方</h3>
 <pre class="prettyprint">$ cat kekka | cjoin0 +ng key=1 master &gt; ok 2&gt; ng
 $ cat kekka | cjoin0 +ng key=1 master - &gt; ok 2&gt; ng
-$ cat master | cjoin0 +ng key=1 - tran &gt; ok 2&gt; ng
-</pre>
+$ cat master | cjoin0 +ng key=1 - tran &gt; ok 2&gt; ng</pre>
 <h3>【関連項目】</h3>
 <p><a href="cjoin0.html" class="command">cjoin0(1)</a>、<a href="cjoin1.html" class="command">cjoin1(1)</a>、<a href="cjoin2.html" class="command">cjoin2(1)</a>、<a href="join1.html" class="command">join1(1)</a>、<a href="join2.html" class="command">join2(1)</a>、<a href="loopj.html" class="command">loopj(1)</a>、<a href="loopx.html" class="command">loopx(1)</a>、<a href="up3.html" class="command">up3(1)</a>、<a href="master-file.html" class="command">マスタファイル(5)</a>、<a href="transaction-file.html" class="command">トランザクションファイル(5)</a></p>
     </div>
