--- a/MANUALHTML/extname.html
+++ b/MANUALHTML/extname.html
@@ -134,15 +134,12 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : extname &lt;pathname&gt;
 Version : Fri Oct 21 11:26:06 JST 2011
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>extname</code>コマンドは指定した<code>&lt;pathname&gt;</code>からサフィックスを出力します。</p>
 <h3>【例１】</h3>
 <pre class="prettyprint">$ extname /home/usp/hogehoge.c
-c
-</pre>
+c</pre>
 <h3>【参考】</h3>
 <p><code>basename</code> コマンド: パスを取り除き、ファイル名のみ取り出す</p>
 <p><code>dirname</code> コマンド: パスの中からディレクトリ名のみ取り出す</p>
@@ -150,7 +147,7 @@ c
 <p><code>extname</code> コマンド: パスの中からサフィックスを取り出す（USPコマンド）</p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 16:42:32 JST 2022</div>
+    <div id="lastmodified">Last modified: Sat Aug 13 12:25:02 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
