--- a/MANUALHTML/han.html
+++ b/MANUALHTML/han.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : han f1 f2 .. [file]
           han -d string
 Version : Mon Mar 21 16:31:46 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの、全角スペース、全角英数記号およびカタカナの部分をすべて半角に変換して出力する。</p>
 <h3>【例1】</h3>
@@ -146,33 +144,28 @@ Edition : 1
 これは データ である。
 Ｔｈｉｓ ｉｓ ｄａｔａ
 １２３４ ５６７ ８９０
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ han 1 2 3 data
 これは ﾃﾞｰﾀ である｡
 This is data
 1234 567 890
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p>フィールドを指定しないと行全体を半角にする。全角スペースは半角スペースになる。</p>
 <pre class="prettyprint">$ cat data2
 これはデータである。
 全角　スペース　データも変換する。
 １２３456７８９
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ han data2
 これはﾃﾞｰﾀである｡
 全角 ｽﾍﾟｰｽ ﾃﾞｰﾀも変換する｡
-123456789
-</pre>
+123456789</pre>
 <h3>【例3】</h3>
 <p><code>-d</code>オプションを使用すると、引数で指定した文字列の全角部分を半角に変えて出力させることができる。</p>
 <pre class="prettyprint">$ han -d カタカナＡＢＣ１２３
 ｶﾀｶﾅABC123
-$
-</pre>
+$</pre>
 <h3>【注意】</h3>
 <p>実行時パラメータの最後尾が実際に存在するファイルの名前であればそれを入力ファイルとして開く。このファイル名は「10」のような数字列であってもかまわない。最後尾が存在するファイル名でないときはそれをフィールドとして処理し、入力ファイル名は省略されたものとして標準入力(stdin)を使用する。</p>
 <h3>【関連項目】</h3>
