--- a/MANUALHTML/join1x.html
+++ b/MANUALHTML/join1x.html
@@ -133,9 +133,7 @@
 <p><code>join1x</code> :  キーの値が同じレコードが複数存在するファイル同士を連結。</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : join1x [+ng[&lt;fd&gt;]] key=&lt;n&gt; &lt;master&gt; [&lt;tran&gt;]
-Version : Fri Jul 22 01:09:14 JST 2022
-
-</pre>
+Version : Fri Jul 22 01:09:14 JST 2022</pre>
 <h3>【説明】</h3>
 <p>テキストファイル<code>&lt;tran&gt;</code>の<code>&quot;key=&lt;n&gt;&quot;</code>で指定したキーフィールドがマスターファイル<code>&lt;master&gt;</code>の第１フィールド(キーフィールド)とマッチした行のみを<code>&lt;tran&gt;</code>から抽出して、<code>&lt;master&gt;</code>の情報を連結して出力します。連結は<code>&lt;tran&gt;</code>のキーフィールドの直後に<code>&lt;master&gt;</code>の内容のうちキーフィールド以外を挿入する形で行われます。</p>
 <p>複数のキーフィールドがある場合、<code>&lt;master&gt;</code>のキーフィールドは、<code>&lt;tran&gt;</code>のキーフィールドと同じ並びで、最小フィールドが１となるようスライドさせたキーフィールドとなります。例えば、<code>key=3/5</code>のときは、並び＝３フィールド連続したキー、なので、<code>&lt;master&gt;</code>は１から３連続したフィールド、つまり、第１から第３フィールドがキーとなります。</p>
@@ -149,8 +147,7 @@ Version : Fri Jul 22 01:09:14 JST 2022
 1 東京1
 1 東京2
 2 大阪1
-2 大阪2
-</pre>
+2 大阪2</pre>
 <p>(トランザクション：tran)</p>
 <pre class="prettyprint">$ cat tran
 1 新宿
@@ -162,8 +159,7 @@ Version : Fri Jul 22 01:09:14 JST 2022
 3 栄
 3 熱田
 4 博多
-4 天神
-</pre>
+4 天神</pre>
 <pre class="prettyprint">$ join1x key=1 master tran &gt; data
 $ cat data
 1 東京1 新宿
@@ -175,8 +171,7 @@ $ cat data
 2 大阪1 難波
 2 大阪2 難波
 2 大阪1 京橋
-2 大阪2 京橋
-</pre>
+2 大阪2 京橋</pre>
     </div>
 
     <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
