--- a/MANUALHTML/keta.html
+++ b/MANUALHTML/keta.html
@@ -136,9 +136,7 @@
           keta -v &lt;filename&gt;
           keta [--] &lt;filename&gt;
 Version : Wed May 20 04:47:49 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの各フィールドの桁数をそろえて出力する。全フィールドに対してフィールド毎の桁数を指定する。指定桁数にそのフィールドの最大長未満を指定すると最大長がとられる。桁数指定をすべて省略すると各フィールドの桁数を自動的に判断して出力できる。フィールドは右詰めで出力するが、桁数指定に<code>-</code>を付けると左詰めにする。桁数指定をすべて省略して代わりに<code>--</code>を指定すると全フィールドを左詰めで出力する。<code>&lt;filename&gt;</code>として<code>-</code>を指定すると標準入力を使用する。桁数指定があるときは<code>&lt;filename&gt;</code>は省略可能になる。桁数指定がないときは<code>&lt;filename&gt;</code>は省略不可。<code>-v</code>または<code>--</code>指定があるときは桁数指定はできず<code>&lt;filename&gt;</code>は省略不可。<code>&lt;filename&gt;</code>が省略されたときは標準入力を仮定する。</p>
 <h3>【例1】</h3>
@@ -150,8 +148,7 @@ Edition : 1
 02 東京都 04 新宿区 30 50 71 36 30
 02 東京都 06 港区 58 71 20 10 6
 04 神奈川県 13 横浜市 92 56 83 96 75
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ keta data             ←右詰め
 01   埼玉県 01 さいたま市 91 59 20 76 54
 01   埼玉県 02     川越市 46 39  8  5 21
@@ -159,8 +156,7 @@ $
 02   東京都 04     新宿区 30 50 71 36 30
 02   東京都 06       港区 58 71 20 10  6
 04 神奈川県 13     横浜市 92 56 83 96 75
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ keta -- data          ←左詰め
 01 埼玉県   01 さいたま市 91 59 20 76 54
 01 埼玉県   02 川越市     46 39 8  5  21
@@ -168,14 +164,12 @@ $
 02 東京都   04 新宿区     30 50 71 36 30
 02 東京都   06 港区       58 71 20 10 6
 04 神奈川県 13 横浜市     92 56 83 96 75
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p>各フィールド毎の桁数を指定して出力する。引数としてファイルの各フィールドの1番目から最終フィールドまでのそれぞれの桁数を順に指定する。</p>
 <p> ↓2フィールド目の桁数<code>keta</code>n1 n2 n3 ・・・・n<code>NF</code>↑ ↑ 1フィールド目の桁数 最終フィールド目の桁数</p>
 <p>なお、桁数は半角での文字数で指定する。大文字の場合は半角2文字分の指定が必要である。<code>keta</code>4は半角では4文字分、全角では2文字分になる。次のコマンドで例1と同じ出力が得られる。</p>
-<pre class="prettyprint">$ keta 2 8 2 10 2 2 2 2 2 data
-</pre>
+<pre class="prettyprint">$ keta 2 8 2 10 2 2 2 2 2 data</pre>
 <h3>【例3】</h3>
 <p>通常は桁は右詰めで出力されるが、左詰めで出力する場合は桁数に<code>-</code>をつけて指定すれば良い。例えば第2フィールドと第4フィールドを左詰めにして出力するには次のようにコマンドを実行する。</p>
 <pre class="prettyprint">$ keta 2 -8 2 -10 2 2 2 2 2 data
@@ -185,23 +179,18 @@ $
 02 東京都   04 新宿区     30 50 71 36 30
 02 東京都   06 港区       58 71 20 10  6
 04 神奈川県 13 横浜市     92 56 83 96 7
-$
-</pre>
+$</pre>
 <h3>【例4】</h3>
 <p>同じ桁数を連続したフィールドに指定する場合は&lt;桁数x連続するフィールド数&gt;と表記することができる。<code>keta</code>3x4は<code>keta</code>3 3 3 3と同じ意味を持つ。フィールド数には<code>NF</code>(1行のフィールド数)を使用し<code>NF-xx</code>と指定できる。次のコマンドで例3と同じ出力が得られる。</p>
-<pre class="prettyprint">$ keta 2 -8 2 -10 2x5 data
-</pre>
-<pre class="prettyprint">$ keta 2 -8 2 -10 2xNF-4 data
-</pre>
+<pre class="prettyprint">$ keta 2 -8 2 -10 2x5 data</pre>
+<pre class="prettyprint">$ keta 2 -8 2 -10 2xNF-4 data</pre>
 <h3>【例5】</h3>
 <p><code>-v</code>オプションを使用するとファイルの各フィールドの最大桁数を表示させることができる。</p>
 <pre class="prettyprint">$ keta -v data
 2 8 2 10 2 2 2 2 2
-$
-</pre>
+$</pre>
 <p>次のコマンドで例1と同じ出力が得られる。</p>
-<pre class="prettyprint">$ keta $(keta -v data) data
-</pre>
+<pre class="prettyprint">$ keta $(keta -v data) data</pre>
 <h3>【関連項目】</h3>
 <p><a href="comma.html" class="command">comma(1)</a></p>
     </div>
