--- a/MANUALHTML/loopx.html
+++ b/MANUALHTML/loopx.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : loopx &lt;file1&gt; &lt;file2&gt; ...
 Version : Sat Jun 20 21:57:20 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>複数のファイルの各行に対して、総てのパターンの掛けあわせを作り連結して出力する。出力は指定ファイル順に行が総掛けされる。<code>&lt;file1&gt;</code>の各行に対し<code>&lt;file2&gt;</code>の行が総掛けされ、その結果の各行に対し<code>&lt;file3&gt;</code>の行が総掛けされるという順番に出力される。</p>
 <h3>【例1】</h3>
@@ -144,18 +142,15 @@ Edition : 1
 <pre class="prettyprint">$ cat data1
 1 農業
 2 工業
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat data2
 A 東京
 B 大阪
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat data3
 晴
 雨
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ loopx data1 data2 data3
 1 農業 A 東京 晴
 1 農業 A 東京 雨
@@ -165,8 +160,7 @@ $
 2 工業 A 東京 雨
 2 工業 B 大阪 晴
 2 工業 B 大阪 雨
-$
-</pre>
+$</pre>
 <h3>【関連項目】</h3>
 <p><a href="join0.html" class="command">join0(1)</a>、<a href="join1.html" class="command">join1(1)</a>、<a href="join2.html" class="command">join2(1)</a>、<a href="loopj.html" class="command">loopj(1)</a>、<a href="up3.html" class="command">up3(1)</a>、<a href="master-file.html" class="command">マスタファイル(5)</a>、<a href="transaction-file.html" class="command">トランザクションファイル(5)</a></p>
     </div>
