--- a/MANUALHTML/marume.html
+++ b/MANUALHTML/marume.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : marume [+age| -sage] &lt;f1.d1&gt; &lt;f2.d2&gt; .. &lt;file&gt;
 Version : Sun Apr 19 23:32:18 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの指定のフィールドを、指定された桁数にて四捨五入、切り上げ、切り捨てを実行して出力する。デフォルトの動作は四捨五入。<code>+age</code>で切り上げ、<code>-sage</code>で切り下げを明示的に指定できる。小数点下に0を指定(n.0)すると該当フィールドを整数で出力する。また、桁数を0+桁数にすると、整数部の桁数以下を四捨五入、切り上げ、切り捨てする。</p>
 <h3>【例1】</h3>
@@ -145,16 +143,14 @@ Edition : 1
 02 3.1242 7.1423 6.5861 2.7735 1235
 03 6.8254 2.6144 4.3234 3.4231 -1234
 04 7.0343 3.3312 7.8678 1.3295 -1235
-$
-</pre>
+$</pre>
 <p>第2フィールドを整数へ四捨五入、第3フィールドを小数点下1桁で四捨五入、第4フィールドを小数点下2桁で四捨五入、第5フィールドを小数点下3桁で四捨五入、第6フィールドを1の位で四捨五入して出力すると次のようになる。</p>
 <pre class="prettyprint">$ marume 2.0 3.1 4.2 5.3 6.01 data
 01 0 1.5 9.00 7.123 1230
 02 3 7.1 6.59 2.774 1240
 03 7 2.6 4.32 3.423 -1230
 04 7 3.3 7.87 1.330 -1240
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p>例1をすべて四捨五入から切る上げに変更すると次のようになる。</p>
 <pre class="prettyprint">$ marume +age 2.0 3.1 4.2 5.3 6.01 data
@@ -162,8 +158,7 @@ $
 02 4 7.2 6.59 2.774 1240
 03 7 2.7 4.33 3.424 -1240
 04 8 3.4 7.87 1.330 -1240
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p>例1をすべて四捨五入から切り下げに変更すると次のようになる。</p>
 <pre class="prettyprint">$ marume -sage 2.0 3.1 4.2 5.3 6.01 data
@@ -171,8 +166,7 @@ $
 02 3 7.1 6.58 2.773 1230
 03 6 2.6 4.32 3.423 -1230
 04 7 3.3 7.86 1.329 -1230
-$
-</pre>
+$</pre>
 <h3>【注意】</h3>
 <p>負数は正数を四捨五入、切り上げ、切り捨てしたものにマイナス符号をつけた値となる。</p>
 <h3>【関連項目】</h3>
