--- a/MANUALHTML/self.html
+++ b/MANUALHTML/self.html
@@ -135,9 +135,7 @@
 <pre class="list">Usage   : self &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
         : self -d &lt;f1&gt; &lt;f2&gt; ... &lt;string&gt;
 Version : Mon Feb 21 00:32:55 JST 2022
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>fileから指定したフィールドのデータだけを取り出して出力する(<code>self=select</code>field)。第0フィールドは行全体を意味する。fileの指定がないとき、あるいはファイル名が<code>-</code>の時は、標準入力よりデータを取り込む。<code>-d</code>オプションが指定された場合、引数の文字列に対して処理が適用される。</p>
 <h3>【例1】</h3>
@@ -148,16 +146,14 @@ Edition : 1
 0000003 杉山______ 26 F 30 50 71 36 30
 0000004 白土______ 40 M 58 71 20 10 6
 0000005 崎村______ 50 F 82 79 16 21 80
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ self 4 2 data
 F 浜地______
 F 鈴田______
 F 杉山______
 M 白土______
 F 崎村______
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p><a href="self.html" class="command">self(1)</a>はフィールド中の部分を切り出して出力することもできる。処理としてはawk(1)のsubstr関数と同じ処理となる。</p>
 <p>たとえば第1フィールドの4文字目以降を出力するには次のようにコマンドを実行する。</p>
@@ -167,8 +163,7 @@ $
 0003 杉山______
 0004 白土______
 0005 崎村______
-$
-</pre>
+$</pre>
 <p>第2フィールドの1文字目から半角4文字分(全角2文字分)出力する。</p>
 <pre class="prettyprint">$ self 2.1.4 3 data
 浜地 50
@@ -176,8 +171,7 @@ $
 杉山 26
 白土 40
 崎村 50
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p>0で行全体を指定できる。</p>
 <pre class="prettyprint">$ self 0 data
@@ -186,16 +180,14 @@ $
 0000003 杉山______ 26 F 30 50 71 36 30
 0000004 白土______ 40 M 58 71 20 10 6
 0000005 崎村______ 50 F 82 79 16 21 80
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ self 4 0 data
 F 0000000 浜地______ 50 F 91 59 20 76 54
 F 0000001 鈴田______ 50 F 46 39 8 5 21
 F 0000003 杉山______ 26 F 30 50 71 36 30
 M 0000004 白土______ 40 M 58 71 20 10 6
 F 0000005 崎村______ 50 F 82 79 16 21 80
-$
-</pre>
+$</pre>
 <h3>【例4】</h3>
 <p>連続したフィールドも記述できる。</p>
 <pre class="prettyprint">$ self 2/5 data
@@ -204,8 +196,7 @@ $
 杉山______ 26 F 30
 白土______ 40 M 58
 崎村______ 50 F 82
-$
-</pre>
+$</pre>
 <h3>【例5】</h3>
 <p><code>NF</code>(現在の行のフィールド数)を使用することができる。</p>
 <pre class="prettyprint">$ self 1 NF-3 NF data
@@ -214,45 +205,38 @@ $
 0000003 50 30
 0000004 71 6
 0000005 79 80
-$
-</pre>
+$</pre>
 <h3>【例6】</h3>
 <p>複数の空白があるフィールドを1つの空白にすることができる。</p>
 <pre class="prettyprint">$ cat data2
 a    b
 c   d e
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ self 1/NF data2
 a b
 c d e
-$
-</pre>
+$</pre>
 <h3>【例7】</h3>
 <p>ダイレクトモードを使用して文字列を加工することができる。</p>
 <pre class="prettyprint">$ self -d 1.1.4 &quot;20070401 12345&quot;
 2007
-$
-</pre>
+$</pre>
 <h3>【例8】</h3>
 <p><code>self</code>の切り出し指定は画面表示長の半角文字分を1として扱う。</p>
 <pre class="prettyprint">$ echo ｱｲｳｴｵｶｷｸｹｺ | self 1.3.4
 ｳｴｵｶ
-$
-</pre>
+$</pre>
 <h3>【注意】</h3>
 <p>入力ファイルが改行文字で終了していない場合、つまり行が尻切れになっている場合はファイル末尾に改行文字が追加されて完結した行になる。</p>
 <p><code>-d</code>指定がないとき 数字名のファイルを使用してはならない。 もし10という名前のファイルが存在しても<code>self</code>1 10は標準入力ファイルから第1および第10フィールドを抽出するという動作をする 数字名以外であっても最後のパラメータがフィールド指定形式に見合った文字列のとき それはファイル名ではなくフィールド指定とみなされて入力は標準入力から行なわれる</p>
 <p>また、文字列切り出し指定において、切り取りや長さが文字の区切りに一致しないときにはエラーとなる。</p>
 <pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.2.4
 Errorself] : Rec 1. エラー
-$
-</pre>
+$</pre>
 <p>フィールドの幅より大きい開始位置を指定してもエラーとなる。</p>
 <pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.20
 Errorself] : Rec 1. エラー
-$
-</pre>
+$</pre>
 <h3>【関連項目】</h3>
 <p><a href="delf.html" class="command">delf(1)</a></p>
     </div>
