--- a/MANUALHTML/sm2.html
+++ b/MANUALHTML/sm2.html
@@ -133,9 +133,7 @@
 <p><code>sm2</code> :  キー単位での値の集計</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : sm2 [+count] &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; [&lt;file&gt;]
-Version : Fri Jul 29 15:32:20 JST 2022
-
-</pre>
+Version : Fri Jul 29 15:32:20 JST 2022</pre>
 <h3>【説明】</h3>
 <p><code>&lt;file&gt;</code>ファイルから、キーが同じ行の各フィールドの値を集計する。k1で指定したフィールドからk2で指定したフィールドまでをキーとして、s1で指定したフィールドからs2で指定したフィールドまでの各フィールドを集計する。同じキーをもつ行は1行に集計されて出力される。なお、キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力はされない。</p>
 <h3>【例1】</h3>
@@ -152,16 +150,14 @@ Version : Fri Jul 29 15:32:20 JST 2022
 0004 上野店 20060201 60 89 33 18 6
 0004 上野店 20060202 95 60 35 93 76
 0004 上野店 20060203 92 56 83 96 75
-$
-</pre>
+$</pre>
 <p>店別の売れ数の合計を出力させる。第1フィールドから第2フィールドをキーとして第4フィールドから第8フィールドを集計する。</p>
 <pre class="prettyprint">$ sm2 1 2 4 8 data
 0001 新橋店 219 98 51 165 85
 0002 池袋店 166 134 135 74 87
 0003 新宿店 184 172 93 45 142
 0004 上野店 247 205 151 207 157
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p><code>+c</code>oun<code>t</code>オプションはキー毎の集計すると同時に、元データの各キー毎の行の行数をキーの直後に挿入出力する。</p>
 <pre class="prettyprint">$ cat data
@@ -174,15 +170,13 @@ $
 3333 8
 3333 9
 3333 6
-$
-</pre>
+$</pre>
 <p>キーが同一の行を出力する。</p>
 <pre class="prettyprint">$ sm2 +count 1 1 2 2 data
 1111 3 10
 2222 2 13
 3333 4 27
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p><a href="sm2.html" class="command">sm2(1)</a>は小数点がある場合、各キー、各フィールド毎に一番精度の高い数に合わせて出力する。</p>
 <pre class="prettyprint">$ cat data3
@@ -190,28 +184,23 @@ a 1.4 2.55
 a 2   4
 b 1.33 2.1
 b 5.222 3.12
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ sm2 1 1 2 3 data3
 a 3.4 6.55
 b 6.552 5.22
-$
-</pre>
+$</pre>
 <h3>【例4】</h3>
 <p>キーを0 0に指定すると、集計フィールドの総合計を出力する。</p>
 <pre class="prettyprint">$ cat data4
 a 1
 b 2
 c 3
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ sm2 0 0 2 2 data4
 6
-$
-</pre>
+$</pre>
 <p>指定したディレクトリに存在するファイルのサイズを合計するには次のようにコマンドを実行する。</p>
-<pre class="prettyprint">$ ls -l directory | sm2 0 0 5 5
-</pre>
+<pre class="prettyprint">$ ls -l directory | sm2 0 0 5 5</pre>
 <h3>【関連項目】</h3>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
