--- a/MANUALHTML/sm4.html
+++ b/MANUALHTML/sm4.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : sm4 [+h] &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
 Version : Tue Oct 20 15:17:47 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;file&gt;</code>ファイルにおけるサブキーによる小計や中計を計算する。k1で指定したフィールドからk2で指定したフィールドまでを主キー、d1からd2までのフィールドがサブキー、s1からs2までのフィールドまでのフィールドを集計フィールドとして、主キーの値が同じキーをサブキーのフィールドを飛ばして集計フィールドを集計して各主キーの行の最終行に挿入する。</p>
 <p>集計行におけるサブキーのフィールドは@で補完される。小計および中計を段階的に付与するために<a href="sm4.html" class="command">sm4(1)</a>を複数回使用する場合には、サブキーに@が含まれる行は集計から除外される。キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力は実行されない。</p>
@@ -156,8 +154,7 @@ Edition : 1
 04 神奈川県 12 横浜市 92 56 83 96 75
 04 神奈川県 13 川崎市 30 12 32 44 19
 04 神奈川県 14 厚木市 48 66 23 71 24
-$
-</pre>
+$</pre>
 <p>県別に小計を出力する。</p>
 <pre class="prettyprint">$ sm4 1 2 3 4 5 NF data
 01 埼玉県 01 さいたま市 91 59 20 76 54
@@ -178,8 +175,7 @@ $
 04 神奈川県 13 川崎市 30 12 32 44 19
 04 神奈川県 14 厚木市 48 66 23 71 24
 04 神奈川県 @@ @@@@@@@@@@ 170 134 138 211 118
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p>小計と中計を出す。</p>
 <pre class="prettyprint">$ cat data
@@ -198,8 +194,7 @@ $
 02 関西地区 02 兵庫県 08 芦屋市 50 2 33 15 62
 02 関西地区 03 京都府 09 京都市 52 91 44 9 0
 02 関西地区 03 京都府 10 舞鶴市 60 89 33 18 6
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ sm4 1 4 5 6 7 11 data &gt; data2
 $ cat data2
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
@@ -222,8 +217,7 @@ $ cat data2
 02 関西地区 03 京都府 09 京都市 52 91 44 9 0
 02 関西地区 03 京都府 10 舞鶴市 60 89 33 18 6
 02 関西地区 03 京都府 @@ @@@@@@@@@@ 112 180 77 27 6
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ sm4 1 2 3 6 7 11 data2
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 関東地区 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -247,8 +241,7 @@ $
 02 関西地区 03 京都府 10 舞鶴市 60 89 33 18 6
 02 関西地区 03 京都府 @@ @@@@@@@@@@ 112 180 77 27 6
 02 関西地区 @@ @@@@@@ @@ @@@@@@@@@@ 629 493 312 302 320
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p>サブキーがない場合には次のような実行結果が得られる。</p>
 <pre class="prettyprint">$ cat data
@@ -266,8 +259,7 @@ $
 神奈川県 92 56 83 96 75
 神奈川県 30 12 32 44 19
 神奈川県 48 66 23 71 24
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ sm4 1 1 x x 2 6 data
 埼玉県 91 59 20 76 54
 埼玉県 46 39 8 5 21
@@ -287,8 +279,7 @@ $
 神奈川県 30 12 32 44 19
 神奈川県 48 66 23 71 24
 @@@@@@ 170 134 138 211 118
-$
-</pre>
+$</pre>
 <h3>【関連項目】</h3>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
