--- a/MANUALHTML/sm5.html
+++ b/MANUALHTML/sm5.html
@@ -134,9 +134,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : sm5 [+h] &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
 Version : Sat Jun 20 21:57:22 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;input&gt;</code>ファイルに大計(全行の合計値)行を追加する。k1で指定したフィールドからk2で指定したフィールドまでをキー、s1からs2までのフィールドを集計フィールドとして、キー以外の集計各フィールドの全合計の行を最終行に挿入する。この行のキーフィールドは@で補完される。</p>
 <p><a href="sm4.html" class="command">sm4(1)</a>で小計、中計を付与されているファイルを処理する場合は、<a href="sm4.html" class="command">sm4(1)</a>で付与した@の小計および中計行は無視して大計を計算する。</p>
@@ -156,8 +154,7 @@ Edition : 1
 04 神奈川県 12 横浜市 92 56 83 96 75
 04 神奈川県 13 川崎市 30 12 32 44 19
 04 神奈川県 14 厚木市 48 66 23 71 24
-$
-</pre>
+$</pre>
 <p>大計を出力する。</p>
 <pre class="prettyprint">$ sm5 1 4 5 NF data
 01 埼玉県 01 さいたま市 91 59 20 76 54
@@ -175,8 +172,7 @@ $
 04 神奈川県 13 川崎市 30 12 32 44 19
 04 神奈川県 14 厚木市 48 66 23 71 24
 @@ @@@@@@ @@ @@@@@@@@@@ 894 687 485 606 514
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p><a href="sm4.html" class="command">sm4(1)</a>で小計および中計が追加されたデータを処理する場合は次のようになる。</p>
 <pre class="prettyprint">$ cat data
@@ -198,8 +194,7 @@ $
 04 神奈川県 13 川崎市 30 12 32 44 19
 04 神奈川県 14 厚木市 48 66 23 71 24
 04 神奈川県 @@ @@@@@@@@@@@@@@@@ 170 134 138 211 118
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ sm5 1 4 5 NF data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
@@ -220,16 +215,14 @@ $
 04 神奈川県 14 厚木市 48 66 23 71 24
 04 神奈川県 @@ @@@@@@@@@@@@@@@@ 170 134 138 211 118
 @@ @@@@@@ @@ @@@@@@@@@@ 894 687 485 606 514
-$
-</pre>
+$</pre>
 <h3>【コラム】sm系コマンドの合わせ方</h3>
 <p>データを集計する帳票をTukubaiで記述する場合、同じキーを集計して小計、中計を出して最後に大計を出す、という処理が頻出する。こういった場合は<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>を次のように多段に組み合わせて使用することが多い。</p>
 <pre class="prettyprint">$ cat data              |
 sm2 1 6 7 NF            |       ←同一キーで集計
 sm4 1 4 5 6 7 NF        |       ←小計
 sm4 1 2 3 6 7 NF        |       ←中計
-sm5 1 6 7 NF &gt; result           ←大計を出力
-</pre>
+sm5 1 6 7 NF &gt; result           ←大計を出力</pre>
 <h3>【関連項目】</h3>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
