--- a/MANUALHTML/tcat.html
+++ b/MANUALHTML/tcat.html
@@ -134,24 +134,20 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : tcat [-n] &lt;file1&gt; &lt;file2&gt;...
 Version : Sat Jun 20 21:57:22 JST 2020
-Edition : 1
-
-</pre>
+Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数で指定した複数のファイルを縦に並べて連結して出力する。</p>
 <h3>【例1】</h3>
 <pre class="prettyprint">$ cat file1
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ cat file2
 0000008 角屋______   50    F 52 91 44  9  0
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
-$
-</pre>
+$</pre>
 <pre class="prettyprint">$ tcat file1 file2
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
@@ -159,8 +155,7 @@ $
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
-$
-</pre>
+$</pre>
 <h3>【例2】</h3>
 <p><code>-&lt;n&gt;</code>オプションを使用すると、ファイルを<code>&lt;n&gt; -</code>で指定した行数分だけ間をあけて連結することができる。</p>
 <p>2行あけて連結するには次のようにコマンドを実行する。</p>
@@ -173,12 +168,10 @@ $
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
-$
-</pre>
+$</pre>
 <h3>【例3】</h3>
 <p>標準入力から読み込む場合、標準入力側のテキストを引数<code>-</code>で指定する。</p>
-<pre class="prettyprint">$ cat file1 | tcat - file2
-</pre>
+<pre class="prettyprint">$ cat file1 | tcat - file2</pre>
 <h3>【関連項目】</h3>
 <p><a href="ctail.html" class="command">ctail(1)</a>、<a href="getfirst.html" class="command">getfirst(1)</a>、<a href="getlast.html" class="command">getlast(1)</a>、<a href="ycat.html" class="command">ycat(1)</a></p>
     </div>
